--- a/package.json
+++ b/package.json
@@ -14,25 +14,15 @@
     "url": "https://github.com/jbarroso/solritajs/issues"
   },
   "dependencies": {
-    "grunt": "0.3.17",
-    "grunt-contrib": "0.1.7",
-    "grunt-jasmine-task": "0.2.3",
 
     "lodash": "0.8.2",
     "requirejs": "2.1.1",
     "handlebars": "1.0.7",
     "express": "2.5.9",
-    "http-proxy": "0.8.3",
 
     "stylus": "0.30.1",
     "nib": "0.8.2",
     "cssom": "0.2.5"
   },
-  "devDependencies": {
-    "grunt": "~0.3.17"
-  },
-  "keywords": ["backbone", "paginator", "solr", "jasmine", "bbb", "boilerplate"],
-  "engines": {
-    "node": ">= 0.6.0"
-  }
+  "keywords": ["backbone", "paginator", "solr", "jasmine", "bbb", "boilerplate"]
 }
