--- a/package.json
+++ b/package.json
@@ -14,19 +14,14 @@
     "url": "https://github.com/jbarroso/solritajs/issues"
   },
   "dependencies": {
-
     "lodash": "0.8.2",
     "requirejs": "2.1.1",
     "handlebars": "1.0.7",
-    "express": "2.5.9",
-
-    "stylus": "0.30.1",
-    "nib": "0.8.2",
-    "cssom": "0.2.5"
+    "express": "2.x"
   },
   "keywords": ["backbone", "paginator", "solr", "jasmine", "bbb", "boilerplate"],
   "engines": {
-    "node": "0.8.x",
+    "node": ">= 0.6.0 < 0.7.0",
     "npm": "1.1.x"
   }
 }
