--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
     "compress": "^0.99.0",
     "compression": "^1.3.0",
     "express": "^4.10.7",
-    "lodash": "^2.4.1"
+    "lodash": "^2.4.1",
+    "serve-favicon": "^2.2.0"
   },
   "keywords": [
     "backbone",
