--- a/package.json
+++ b/package.json
@@ -28,5 +28,24 @@
     "bbb",
     "boilerplate"
   ],
-  "engines": {}
+  "engines": {},
+  "devDependencies": {
+    "grunt": "~0.4.5",
+    "grunt-contrib-jshint": "~0.10.0",
+    "grunt-contrib-cssmin": "~0.10.0",
+    "grunt-contrib-copy": "~0.5.0",
+    "grunt-contrib-clean": "~0.5.0",
+    "grunt-contrib-requirejs": "~0.4.4",
+    "grunt-processhtml": "~0.3.3",
+    "grunt-karma": "~0.8.3",
+    "grunt-karma-coveralls": "~2.5.1",
+    "grunt-bbb-styles": "~0.1.0-alpha.5",
+    "grunt-bbb-server": "~0.1.0-alpha.13",
+    "karma-jasmine": "~0.3.4",
+    "karma-phantomjs-launcher": "~0.1.4",
+    "karma-coverage": "~0.2.4"
+  },
+  "scripts": {
+    "test": "grunt test coveralls"
+  }
 }
